[package]
name = "app_auto_login"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
rustautogui = { git = "https://github.com/snaiperskaya96/rustautogui" }
sysinfo = "0.31.4"
windows-registry = "0.2.0"

[[bin]]
name = "steam_login"
path = "src/steam/steam.rs"
